// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field exports the property to JSON 1`] = `
Object {
  "aggregatable": true,
  "conflictDescriptions": Object {
    "a": Array [
      "b",
      "c",
    ],
    "d": Array [
      "e",
    ],
  },
  "count": 1,
  "esTypes": Array [
    "keyword",
  ],
  "lang": "lang",
  "name": "name",
  "readFromDocValues": false,
  "script": "script",
  "scripted": true,
  "searchable": true,
  "subType": Object {
    "multi": Object {
      "parent": "parent",
    },
    "nested": Object {
      "path": "path",
    },
  },
  "type": "string",
}
`;

exports[`Field spec snapshot 1`] = `
Object {
  "aggregatable": true,
  "conflictDescriptions": Object {
    "a": Array [
      "b",
      "c",
    ],
    "d": Array [
      "e",
    ],
  },
  "count": 1,
  "customLabel": undefined,
  "esTypes": Array [
    "keyword",
  ],
  "format": Object {
    "id": "number",
    "params": Object {
      "pattern": "$0,0.[00]",
    },
  },
  "isMapped": undefined,
  "lang": "lang",
  "name": "name",
  "readFromDocValues": false,
  "runtimeField": Object {
    "script": Object {
      "source": "emit('hello world')",
    },
    "type": "keyword",
  },
  "script": "script",
  "scripted": true,
  "searchable": true,
  "shortDotsEnable": undefined,
  "subType": Object {
    "multi": Object {
      "parent": "parent",
    },
    "nested": Object {
      "path": "path",
    },
  },
  "type": "string",
}
`;
